<resources>
    <string name="app_name">M08UF2_Practica_KevinMiguel</string>
    <string name="grabar_sonido">Grabar sonido</string>
    <string name="atr_s">Atrás</string>
    <string name="reproducir_sonido">Reproducir sonido</string>
    <string name="imagen_interpolaci_n">Imagen Interpolación</string>
    <string name="imagen_fotograma">Imagen fotograma</string>
    <string name="atras">Atras</string>
    <string name="boton_interpolaci_n">Boton Interpolación</string>
    <string name="title_activity_btn01__interpolacion">Btn01_Interpolacion</string>
    <string name="mario">mario</string>
    <string name="boton_fotograma">Boton Fotograma</string>
    <string name="eventos_mapa">Eventos Mapa</string>
    <string name="gps">GPS</string>
    <string name="googlemaps">GoogleMaps</string>
    <string name="hacer_foto">Hacer foto</string>
    <string name="foto_de_c_mara">Foto_de_cámara</string>
    <string name="foto_para_visualizarrrrr">Foto_para_visualizarrrrr</string>
    <string name="title_activity_google_maps">Map</string>
</resources>
