<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_btn02__gps"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kevin.m08uf2_practica_kevinmiguel.Btn02_GPS">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <Button
            android:text="@string/gps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnGPS" />

        <Button
            android:text="@string/googlemaps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnGoogleMaps" />

        <Button
            android:text="@string/eventos_mapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnEventosMapa" />

        <Button
            android:text="@string/atr_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnAtras" />
    </LinearLayout>
</RelativeLayout>
