<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_btn04__sonido"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kevin.m08uf2_practica_kevinmiguel.Btn04_Sonido">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <ToggleButton
            android:text="@string/grabar_sonido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnGrabarSonido" />

        <Button
            android:text="@string/reproducir_sonido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnReproducirSonido" />

        <Button
            android:text="@string/atr_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnAtras" />
    </LinearLayout>
</RelativeLayout>
